# esi-g4ox

./: CMakeLists.txt  README.md  cxs_min.sh  plot_csg_tree.py  plot_position.py  pyproject.toml  run.mac  run.sh  run1.mac  vis.mac
.devcontainer/: devcontainer.json
.github/workflows/: build-pull-request.yaml
cmake/: Config.cmake.in
g4ox/: csg.py
geom/: basic_detector.gdml  basic_detector_diff_physics.gdml  dune_full_test_opticks_nobeam.gdml  opticks_raindrop.gdml  pfRICH_complex.gdml  pfrich.gdml  pfrich_min.gdml  pfrich_min_FINAL.gdml  pfrich_min_added_parameters.gdml  pfrich_min_irrealistic_rindex.gdml  pfrich_min_opticks.gdml  pfrich_mirrors.gdml  pfrich_only_few_volumes.gdml  pfrich_opticks.gdml  raindrop.gdml  test_cone.gdml  test_tube.gdml
scripts/: plot-csg.py  serve-path.py
src/: CMakeLists.txt  CSGOptiXSimTest.cc  Opticks_GPU.cc  consgeo.cpp  csg_tree.cpp  g4app.h  g4ox.h  make_csg_tree.cpp  simg4ox.cpp  simtox.cpp
tests/: compare_ab.py
