[tool.poetry]
name = "g4ox"
version = "0.0.0"
description = ""
authors = ["BNL NPPS"]
readme = "README.md"
packages = [{include = "g4ox"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1"
plotly = "^5.22.0"
nbformat = "^5.10.4"
flask = "^3.1.0"
flask-autoindex = "^0.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
